Quorum/Library/Tests/Actions/Fail/MissingAction3.quorum
class MissingAction3 
    action Main
        
    end
end